--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
   "types": "./build/index.d.ts",
   "scripts": {
     "test": "jest --",
+    "test:cucumber": "cucumber-js -p default",
     "test:watch": "jest --watch --",
     "test:watch-all": "jest --watchAll"
   },
   "dependencies": {
     "@types/node": "^14.14.31",
     "deep-equal": "^2.0.5",
-    "typescript": "^4.2.2",
-    "ts-node": "^9.1.1",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
+    "@cucumber/cucumber": "^7.3.0",
+    "@cucumber/pretty-formatter": "^1.0.0-alpha.1",
+    "@types/chai": "^4.2.19",
     "@types/deep-equal": "^1.0.1",
+    "@types/jest": "^26.0.20",
+    "chai": "^4.3.4",
+    "cucumber-tsflow": "^4.0.0-rc.1",
     "jest": "^26.6.3",
     "jest-mock-extended": "^1.0.13",
-    "ts-jest": "^26.5.2"
+    "ts-jest": "^26.5.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.3.5"
   }
 }
