--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "noImplicitAny": true,
         "sourceMap": true,
         "outDir": "./dist",
+        "experimentalDecorators": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
